--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(zero_to_three[0])\n",
     "print(zero_to_three[1])\n",
@@ -79,9 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "for number in zero_to_three:\n",
     "    print(number)"
@@ -106,9 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is iteration: 1\n",
+      "0\n",
+      "This is iteration: 2\n",
+      "1\n",
+      "This is iteration: 3\n",
+      "2\n",
+      "This is iteration: 4\n",
+      "3\n",
+      "The for loop is finished now! I am not in the for loop block, which is why I only printed once!\n"
+     ]
+    }
+   ],
    "source": [
     "iteration_count = 0\n",
     "for whatever_we_want in zero_to_three:\n",
@@ -134,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,9 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n",
+      "3\n",
+      "France\n",
+      "4\n",
+      "Brazil\n",
+      "5\n",
+      "Japan\n",
+      "6\n",
+      "Vietnam\n",
+      "7\n",
+      "Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(index)\n",
@@ -161,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,9 +232,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -188,11 +264,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
-    "for index in [0,1,2,3,4,5,6,7,8,9,10]:\n",
+    "for index in range(0,len(cities)):\n",
     "    print(cities[index]+\",\", countries[index])"
    ]
   },
@@ -205,9 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(countries)"
    ]
@@ -228,9 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 8)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "range(0, len(countries))"
    ]
@@ -244,9 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(0, len(countries)))"
    ]
@@ -260,9 +384,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in list(range(0, len(countries))):\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -277,9 +416,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n",
+      "Mexico City, Mexico\n"
+     ]
+    }
+   ],
    "source": [
     "countries.append('Mexico')\n",
     "cities.append('Mexico City')\n",
@@ -303,9 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A String\n",
+      "['a', 'list', 'of', 5, ['elements']]\n",
+      "{'this': 'is a dictionary'}\n"
+     ]
+    }
+   ],
    "source": [
     "different_elements = ['A String', [\"a\", 'list', \"of\", 5, [\"elements\"]], {'this': \"is a dictionary\"}]\n",
     "for element in different_elements:\n",
@@ -323,9 +488,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('first_name', 'Terrance'), ('last_name', 'KOAR'), ('favorite_language', 'Python')])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_items"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "example_dictionary = {'first_name': \"Terrance\", 'last_name': \"KOAR\", 'favorite_language': \"Python\"}\n",
     "print(example_dictionary.items())\n",
@@ -341,9 +524,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the key: first_name\n",
+      "this is the value: Terrance \n",
+      "\n",
+      "this is the key: last_name\n",
+      "this is the value: KOAR \n",
+      "\n",
+      "this is the key: favorite_language\n",
+      "this is the value: Python \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for key, value in example_dictionary.items():\n",
     "    print(\"this is the key:\", key)    \n",
@@ -359,17 +558,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terrance Koar\n"
+     ]
+    }
+   ],
    "source": [
-    "first_name = \"\"\n",
-    "last_name = \"\"\n",
+    "first_name = ''\n",
+    "last_name = ''\n",
     "for key, value in example_dictionary.items():\n",
     "    if key == \"last_name\":\n",
     "        last_name = value.title()\n",
     "    if key == \"first_name\":\n",
-    "        first_name = value\n",
+    "        first_name = value.title()\n",
     "print(first_name, last_name)"
    ]
   },
@@ -389,9 +596,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Croatia\n",
+      "USA\n",
+      "Argentina\n",
+      "France\n",
+      "Brazil\n",
+      "Japan\n",
+      "Vietnam\n",
+      "Israel\n",
+      "Mexico\n"
+     ]
+    }
+   ],
    "source": [
     "for country in countries:\n",
     "    print(country)"
@@ -399,9 +622,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Mint Chocolate Chip ice cream!!\n",
+      "I love Coffee ice cream!!\n",
+      "I love Cookie Dough ice cream!!\n",
+      "I love Fudge Mint Brownie ice cream!!\n",
+      "I love Vanilla Bean ice cream!!\n"
+     ]
+    }
+   ],
    "source": [
     "ice_cream_flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
     "for ice_cream_flavor in ice_cream_flavors:\n",
@@ -421,13 +656,6 @@
    "source": [
     "In this lesson, we learned how to use loops to iterate through a collection of elements. We started with iterating through a list of numbers, and performed the same operation on each number. Then we saw how we can loop through the numbers and have each number be used to access a successive element from a separate list, like `countries`.  We then saw that to ensure that our list of numbers matched the indices of a our other list, we had to use the expression, `for element in list(range(0, len(list)))`. Finally, we introduced a naming convention that is commonly used when naming the variable for our loops when iterating over a collection that is a list of common elements (i.e. `ice_cream_flavor` for a list of `ice_cream_flavors`)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -439,14 +667,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
